# minority_foodservice_app2

./: CMakeLists.txt  README.md  main.cpp
frontend/: app.js  index.html  style.css
src/: db.cpp
